[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/LanMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://styles/background_style.tres" type="StyleBox" id=4]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="lan_menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="HBoxContainer" parent="."]
margin_right = 1900.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_btn" type="Button" parent="header"]
margin_right = 90.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "<"

[node name="title" type="Label" parent="header"]
margin_left = 94.0
margin_top = 3.0
margin_right = 1900.0
margin_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Jouer en LAN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="."]
anchor_left = 0.269958
anchor_top = 0.0448519
anchor_right = 0.730042
anchor_bottom = 0.935185
margin_left = -0.320007
margin_top = -0.440002
margin_right = 0.319946
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/separation = 29
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="host_btn" type="Button" parent="menu"]
margin_top = 366.0
margin_right = 884.0
margin_bottom = 466.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "CrÃ©er une partie"

[node name="join_btn" type="Button" parent="menu"]
margin_top = 495.0
margin_right = 884.0
margin_bottom = 595.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Rejoindre une partie"
